@@ -3,9 +3,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.facebook.airlift</groupId>
+        <groupId>com.github.imjalpreet.airbase</groupId>
         <artifactId>airbase</artifactId>
-        <version>102</version>
+        <version>upgradeToJava17-108aef1489-1</version>
     </parent>
 
     <groupId>com.facebook.presto</groupId>
@@ -32,6 +32,58 @@
         <url>https://github.com/prestodb/presto</url>
         <tag>HEAD</tag>
     </scm>
+
+    <repositories>
+        <repository>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <id>sonatype-nexus-snapshots</id>
+            <name>Sonatype Nexus Snapshots</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </repository>
+        <repository>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <id>central</id>
+            <name>Central Repository</name>
+            <url>https://repo.maven.apache.org/maven2</url>
+        </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <id>sonatype-nexus-snapshots</id>
+            <name>Sonatype Nexus Snapshots</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </pluginRepository>
+        <pluginRepository>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <id>central</id>
+            <name>Central Repository</name>
+            <url>https://repo.maven.apache.org/maven2</url>
+        </pluginRepository>
+        <pluginRepository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </pluginRepository>
+    </pluginRepositories>
 
     <properties>
         <air.main.basedir>${project.basedir}</air.main.basedir>
@@ -96,6 +148,8 @@
         <grpc.version>1.64.0</grpc.version>
 
         <air.javadoc.lint>-missing</air.javadoc.lint>
+        <presto-maven-plugin.version>upgradeToJava17-8e3c193985-1</presto-maven-plugin.version>
+        <surefire.argLine></surefire.argLine>
     </properties>
 
     <modules>
@@ -2378,9 +2432,9 @@
                 </plugin>
 
                 <plugin>
-                    <groupId>com.facebook.presto</groupId>
+                    <groupId>com.github.imjalpreet</groupId>
                     <artifactId>presto-maven-plugin</artifactId>
-                    <version>0.4</version>
+                    <version>${presto-maven-plugin.version}</version>
                     <extensions>true</extensions>
                 </plugin>
 
@@ -2395,8 +2449,9 @@
 
         <plugins>
             <plugin>
-                <groupId>com.facebook.presto</groupId>
+                <groupId>com.github.imjalpreet</groupId>
                 <artifactId>presto-maven-plugin</artifactId>
+                <extensions>true</extensions>
             </plugin>
 
             <plugin>
@@ -2427,6 +2482,7 @@
                         <exclude>**/*jmhTest*.java</exclude>
                         <exclude>**/*jmhType*.java</exclude>
                     </excludes>
+                    <argLine>${surefire.argLine}</argLine>
                 </configuration>
             </plugin>
 
@@ -2520,6 +2576,27 @@
     </build>
 
     <profiles>
+        <profile>
+            <id>java8</id>
+            <activation>
+                <jdk>1.8</jdk>
+            </activation>
+            <properties>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>java17</id>
+            <activation>
+                <jdk>17</jdk>
+            </activation>
+            <properties>
+                <surefire.argLine>
+                        --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                </surefire.argLine>
+            </properties>
+        </profile>
         <profile>
             <id>ui</id>
             <activation>
